[backend]: added geo endpoint  for moek and properties
