# api/internal/docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "host": "api.larek.tech",
-    "basePath": "/",
+    "basePath": "/ //no-lint.",
     "paths": {
         "/auth/login": {
             "post": {
@@ -37,7 +37,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.EmailCredentials"
+                            "$ref": "#/definitions/handler.emailCredentials"
                         }
                     }
                 ],
@@ -96,20 +96,127 @@
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "handler.EmailCredentials": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
+        },
+        "/geo/moek": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "geo"
+                ],
+                "summary": "третья тестовая ручка",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "longitude",
+                        "name": "longitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "latitude",
+                        "name": "latitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "radius",
+                        "name": "radius",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.MoekDTO"
+                            }
+                        }
+                    }
                 }
             }
         },
+        "/geo/property": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "geo"
+                ],
+                "summary": "вторая тестовая ручка",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "longitude",
+                        "name": "longitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "latitude",
+                        "name": "latitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "radius",
+                        "name": "radius",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PropertyDTO"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/geo/property/id/:object": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "geo"
+                ],
+                "summary": "тестовая ручка на проверку postgis",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PropertyDTO"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
         "handler.RegisterData": {
             "type": "object",
             "properties": {
@@ -135,12 +242,61 @@
                 }
             }
         },
+        "handler.emailCredentials": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.errResponse": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string"
                 }
+            }
+        },
+        "models.MoekDTO": {
+            "type": "object",
+            "properties": {
+                "loadActual": {
+                    "type": "number"
+                },
+                "loadAvg": {
+                    "type": "number"
+                },
+                "loadHeating": {
+                    "type": "number"
+                },
+                "loadVent": {
+                    "type": "number"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "point": {},
+                "polygon": {},
+                "src": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.PropertyDTO": {
+            "type": "object",
+            "properties": {
+                "globalID": {
+                    "type": "integer"
+                },
+                "point": {},
+                "polygon": {}
             }
         }
     }
